--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,233 @@
-.App {
+@media (min-width:760) {
+
+}
+body{
+  background-color:rgb(4, 4, 33);
+  width:100%;
+}
+.header{
+  width: 100%;
+  height: 5vh;
+  background-color:rgb(254, 250, 250);
+  padding:25px;
+}
+ul{
+  list-style-type: none;
+  display:flex;
+  text-decoration:none;
+  margin-left: 30rem;
+}
+li a{
+  text-decoration: none;
+  color:rgb(8, 112, 157);
+  padding:20px;
+  font-weight:light;
+  font-weight:bold;
+  padding: 40px;
+  
+  
+}
+.data{
+  display:flex;
+  margin-top:7rem;
+}
+.content{
+  margin-left:60px;
+  margin-bottom:20px;
+}
+.image{
+  border-radius:100%;
+  width: 15vw;  
+  border: white 0.2rem solid;
+  margin-left:30px;
+
+  
+}
+#logo{
+  display:inline-block;
+  width: 5vw;
+  margin-bottom:2rem;
+  margin-left:35px;
+  padding:20px;
+}
+
+
+h1{
+  color:white;
+  font-size:50px;
+}
+p{
+  color:white;
+}
+#bold{
+  color:rgb(156, 163, 32);
+}
+.prof{
+  margin-right:90px;
+  
+}
+#btn{
+  width:12rem;
+  height:2rem;
+  font-weight:bold;
+  font-size:20px;
+  padding:10px;
+  margin-left:70px;
+   
+}
+#href{
+  width:12rem;
+  height:4rem;
+  font-weight:light;
+  font-size:25px;
+  padding:10px;
+  margin-left:50px;
+  text-decoration: none;
+  color:white;
+}
+.footer{
+ background-color: rgb(4, 3, 19);
+ width:102vw;
+ height:40vh;
+}
+.foot{
+  display: flex;
+  
+  
+}
+option{
+  color:white;
+
+}
+h3{
+  color:white;
+}
+#stack{
+  width: 33%;
+  text-align: left;
+  font-size: 20px;
+  margin-left: 5rem;
+}
+.select{
+  display:flex;
+}
+#in{
+  width:15%;
+  height:2rem;
+  margin-left:100px;
+  border-radius: 5px;
+  background-color: rgb(200, 200, 201);
+  box-shadow: 0px 5px 0px 2px solid;
+  border: none;
+}
+#click{
+  width:8%;
+  height:2.3rem;
+  background-color: rgb(156, 163, 32);
+  color:white;
+  font-weight:bold;
+  border-radius: 5px;
+  box-shadow: 0px 0px 0px 0px;
+  border:none;
+}
+.favicon{
+ padding:15px;
+ float:right;
+ margin-right:150px;
+}
+#fav{
+  padding:20px;
+  
+}
+.About{
+  display:flex;
+  justify-content: center;
+  background-color: rgb(229, 221, 221);
+  width:102vw;
+  height:50vh;
+  padding-top: 20px;
+}
+.text{
+  margin-left:20rem;
+  
+}
+#test{
+  color:rgb(4, 4, 33);
+}
+h3{
+  color:rgb(156, 163, 32);
+}
+#img{
+  border-radius:100%;
+  width: 12vw;  
+  border: rgb(156, 163, 32) 3px solid;
+}
+.png{
+  margin-top: 20px;
+  align-items: center;
+
+}
+.Service{
+  display:flex;
+  background-color: rgb(229, 221, 221);
+}
+.CLOG{
+  display:flex;
+}
+
+
+#contact{
+  width:30px;
+  height:30px;
+
+}
+#email{
+  width:30px;
+  height:30px;
+  margin-left:5rem;
+}
+em{
+  font-size:25px;
+}
+#Cont{
+  display:flex;
+}
+#mail{
+  display:flex;
+}
+h6{
+  font-size:15px;
+  padding-bottom: 20px;
+}
+#cont{
+  display:flex;
+  margin-left:5rem;
+}
+#community{
+  display:flex;
+  justify-content: center;
+}
+.main{
+  width:102vw;
+  height:60vh;
+  background-color: rgb(229, 221, 221);
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.background{
+  background-color:rgb(229, 221, 221);
+  width:102vw;
+}
+.Half{
+  margin-left:5rem;
+}
+.Halve{
+  margin-left: 5rem;
+}
+.main{
+  margin-top:5rem;
+}
+#tag{
+  color:rgb(156, 163, 32);
+  font-size:30px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
